<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_create_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="350dp"
            android:layout_marginBottom="30dp"
            android:textSize="35dp"
            android:textAllCaps="true"
            android:letterSpacing="0.05"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="Welcome To\nKuniyakino" />


        <EditText
            android:id="@+id/inputName"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="20"
            android:hint="Name"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputEmailAddress"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="20"
            android:hint="Email Address"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputMobileNumber"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="20"
            android:hint="Mobile Number"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="20"
            android:hint="Password"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/inputPassword2"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="20"
            android:hint="Verify Password"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/createNewAccount"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:onClick="onCreateNewAccount"
            android:text="Create" />

        <Button
            android:id="@+id/cancelCreateAccount"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:onClick="onCancel"
            android:text="Cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>