<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment"
    android:id="@+id/layout_fragment_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Information"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="18dp"
            android:textAllCaps="true"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="Name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/inputMobileNumber"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="Mobile Number"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/addressLine1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="Address Line 1"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/addressLine2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="Address Line 2"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/paymentMethod"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="Payment Method"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/cardNo"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="Card No"
            android:inputType="text"
            android:padding="10dp" />

        <Button
            android:id="@+id/updateAccount"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:text="Update" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="20dp"
            android:text="Logout" />

    </LinearLayout>
</ScrollView>