...
    <item
        android:id="@+id/ic_location"
        android:icon="@drawable/ic_location"
        android:title="Stores" />

    <item
        android:id="@+id/ic_account"
        android:icon="@drawable/ic_account"
        android:title="Account" />
</menu>
