<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_main_page" >

    <ImageButton
        android:id="@+id/cart"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:background="@null"
...
    <!--            android:text="Kuniyakino" />-->

    <FrameLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="622dp"
        android:layout_above="@id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-1dp" />
...
